--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,14 @@
-<h1> This is the home page </h1>
+<html>
+<head></head>
+<body>
 
-<%= link_to image_tag('jalter.png')%>
-<%= link_to about_path %>
+<h1> Este es un blog de prueba </h1>
+<table>
+    <tr>
+      <td><%= link_to 'About', about_path %></td>
+    </tr>
+      <td><%= image_tag("jalter.png") %></td>
+    </tr>
+</table>
+</body>
+</html>
