--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,12 +2,12 @@
 <head></head>
 <body>
 
-<h1> Este es un blog de prueba </h1>
+<h1> Volveremos pronto </h1>
 <table>
     <tr>
       <td><%= link_to 'About', about_path %></td>
     </tr>
-      <td><%= image_tag("jalter.png") %></td>
+      <td><%= image_tag("under-construccion.png") %></td>
     </tr>
 </table>
 </body>
