--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+  <% flash.each do |name, msg| %>
+    <ul>
+      <li><%= msg%></li>
+    </ul>  
+  <% end %>
   <body>
     <%= yield %>
   </body>
