refactorizados metodos en clase controlador

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,14 @@
 <html>
 <head></head>
 <body>
-
-<h1> Volveremos pronto </h1>
+<h1> Menu Principal </h1>
 <table>
     <tr>
+      <td><%= link_to 'Alpha Blog', articles_path %></td>
       <td><%= link_to 'About', about_path %></td>
     </tr>
-      <td><%= image_tag("under-construccion.png") %></td>
+    <tr>
+     <!--<td><%= image_tag("under-construccion.png") %></td>-->
     </tr>
 </table>
 </body>
