--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,6 @@
-<html>
-<head></head>
-<body>
-<h1> Menu Principal </h1>
-<table>
-    <tr>
-      <td><%= link_to 'Alpha Blog', articles_path %></td>
-      <td><%= link_to 'About', about_path %></td>
-    </tr>
-    <tr>
-     <!--<td><%= image_tag("under-construccion.png") %></td>-->
-    </tr>
-</table>
-</body>
-</html>
+<div class="center jumbotron">
+  <h1>FATE GRAND ORDER</h1>
+  <%= image_tag("fate-go-banner.jpg") %>
+  <%= link_to 'Registrate Ahora', "#", class: "btn btn-primary btn-lg", :id => "register-btn"%>
+</div>
+
