corregido redimension de la imagen del banner

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -24,3 +24,9 @@ $navbar-default-bg: #08088A;
 #register-btn {
     margin-top: 20px
 }
+
+#home-banner {
+   width: 100%;
+   background-repeat:   no-repeat;
+   background-position: center center; 
+}
