Agregado layout footer, agregados estilos al formulario de New Article

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,5 +2,5 @@
   <h1>FATE GRAND ORDER</h1>
   <%= image_tag("fate-go-banner.jpg", :id=> "home-banner") %>
   <%= link_to 'Registrate Ahora', "#", class: "btn btn-primary btn-lg", :id => "register-btn"%>
-</div>
+</div>LEY Nº 29571 
 
