--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,4 @@
-$navbar-default-bg: #08088A;
+$navbar-default-bg: #111;
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
@@ -29,4 +29,36 @@ $navbar-default-bg: #08088A;
    width: 100%;
    background-repeat:   no-repeat;
    background-position: center center; 
+}
+
+.jumbotron h1{
+    color: #111;
+    text-align: center;
+    margin-bottom: 30px;
+    letter-spacing: -1px;
+    font-weight: bold;
+}
+
+.footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+}
+
+.footer a:hover{
+    color: #222;
+}
+
+.footer small {
+    float: left;
+}
+.footer ul {
+    float: right;
+    list-style: none;
+}
+
+.footer ul li {
+    float: left;
+    margin-left: 15px;
 }
