--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -8,12 +8,12 @@
 <% end %>
 <div class='row'>
   <div class='col-xs-12'>
-<%= form_for(@article, :html=> {class: "form-horizontal", role: "form"}) do |a| %>
+  <%= form_for(@article, :html=> {class: "form-horizontal", role: "form"}) do |a| %>
       <div class="form-group">
         <div class="control-label col-sm-2">
           <%= a.label :title %>
         </div>
-        <div class="col-sm-10">
+        <div class="col-sm-8">
           <%= a.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true %>
         </div>
       </div>  
@@ -21,7 +21,7 @@
         <div class="control-label col-sm-2">
            <%= a.label :description %>   
         </div>
-        <div class="col-sm-10">
+        <div class="col-sm-8">
           <%= a.text_area :description, rows: 10, class: "form-control", placeholder: "Description of article" %>
         </div>
       </div>  
@@ -30,7 +30,9 @@
           <%= a.submit class: 'btn btn-primary btn-lg' %>
         </div>  
       </div>
-<% end %>
-<%= link_to 'Back', articles_path %>
-</div>
+  <% end %>
+    <div class="col-xs-4 col-xs-offset-5">
+    [ <%= link_to 'Back to Articles', articles_path %> ]
+    </div>
+  </div>
 </div>
