--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -39,6 +39,26 @@ $navbar-default-bg: #111;
     font-weight: bold;
 }
 
+.article-actions {
+    border-top: 1px solid #eaeaea;
+    padding-top: 5px;
+}
+
+.description {
+    margin-top: 0px;
+}
+
+.article-title {
+    font-weight: bold;
+    font-size: 1.5em;
+}
+
+.article-body {
+    border-top: 1px solid #eaeaea;
+    padding-top: 15px;
+    padding-bottom: 15px;    
+}
+
 .footer {
   margin-top: 45px;
   padding-top: 5px;
@@ -62,3 +82,4 @@ $navbar-default-bg: #111;
     float: left;
     margin-left: 15px;
 }
+
