--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -29,7 +29,7 @@
       </div>  
       <div class="form-group">
         <div class='col-sm-offset-2 col-sm-10'>
-          <%= a.submit(@user.new_record ? "Sign up" : "Update acount", class: 'btn btn-primary btn-lg') %>
+          <%= a.submit(@user.new_record? ? "Sign up" : "Update acount", class: 'btn btn-primary btn-lg') %>
         </div>  
       </div>
   <% end %>
