--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,5 @@
 <h1 align="center">List of all Articles</h1>
-
+<div align="center">
+  <%= will_paginate %>
+</div>
 <%= render 'article', obj: @articles %>
