--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,4 +5,7 @@
   </div>
 </div>  
 <h4 align="center">Welcome to <%= @user.username %> 's articles</h4>
-<%= render 'articles/article', obj: @user.articles %>
+<div align="center">
+  <%= will_paginate @user_articles %>
+</di>
+<%= render 'articles/article', obj: @user_articles %>
