Se agregaron reglas y restricciones a la edicion de user y articles

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="center jumbotron">
   <h1>FATE GRAND ORDER</h1>
   <%= image_tag("fate-go-banner.jpg", :id=> "home-banner") %>
-  <%= link_to 'Registrate Ahora', "#", class: "btn btn-primary btn-lg", :id => "register-btn"%>
+  <%= link_to 'Registrate Ahora', signup_path, class: "btn btn-primary btn-lg", :id => "register-btn"%>
 </div>
 
