--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -17,6 +17,15 @@
         <div class="col-sm-8">
           <%= a.text_area :description, rows: 10, class: "form-control", placeholder: "Description of article" %>
         </div>
+      </div>
+      <div class="form-group">
+        <div class='row'>
+          <div class='col-sm-offset-2 col-sm-8'>
+              <%= a.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+                <% cb.label(class: 'checkbox-inline input_checkbox') {cb.check_box(class: 'checkbox') + cb.text}%>
+              <% end %>
+          </div>
+        </div>  
       </div>  
       <div class="form-group">
         <div class='col-sm-offset-2 col-sm-10'>
